# tg-restorants-bot

./: .env.localdev.example  .env.production.example  .gitignore  CLAUDE.md  DOCKER_ENV_GUIDE.md  README.MD  docker-compose.localdev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .coverage  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_cafe_notifications.py  003_tgid_bigint.py  004_add_menu_item_options_and_standalone_orders.py  005_user_access_requests.py
backend/src/: config.py  database.py  main.py
backend/src/auth/: __init__.py  dependencies.py  jwt.py  schemas.py  telegram.py
backend/src/cache/: __init__.py  redis_client.py
backend/src/gemini/: __init__.py  client.py  key_pool.py  prompts.py
backend/src/kafka/: __init__.py  events.py  producer.py
backend/src/lunch_bot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/models/: __init__.py  cafe.py  deadline.py  order.py  summary.py  user.py
backend/src/repositories/: __init__.py  base.py  cafe.py  cafe_link.py  deadline.py  menu.py  order.py  summary.py  user.py  user_request.py
backend/src/routers/: __init__.py  auth.py  cafe_links.py  cafes.py  deadlines.py  health.py  menu.py  orders.py  recommendations.py  summaries.py  user_requests.py  users.py
backend/src/schemas/: __init__.py  cafe.py  cafe_link.py  deadline.py  menu.py  order.py  summary.py  (+3 more)
backend/tests/: conftest.py  e2e_seed.py
backend/workers/: notifications.py  recommendations.py
(+351 files in other folders)
