[project]
name = "lunch-bot-backend"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.17",

    # Kafka (event-driven architecture)
    "faststream[kafka]>=0.6.3",

    # Redis (caching + key counters)
    "redis>=5.0.0",

    # Structured logging
    "structlog>=24.0.0",

    # Telegram Bot
    "aiogram>=3.0.0",

    # Gemini API
    "google-genai>=1.0.0",

    # Scheduler for batch jobs
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
